# SchurVINS

./: .gitmodules  Dockerfile  MH_01.txt  MH_03.txt  MH_05.txt  V1_01.txt  V1_03.txt  V2_01.txt  V2_03.txt
.github/workflows/: docker-image.yml
dbow2_catkin/: CMakeLists.txt
fast_neon/: CMakeLists.txt
svo/include/svo/: schur_vins.h
svo/src/: pose_optimizer.cpp  schur_vins.cpp
svo_ceres_backend/: CMakeLists.txt
svo_ceres_backend/src/: ceres_backend_publisher.cpp  estimator.cpp
svo_cmake/cmake/Modules/: SvoSetup.cmake
svo_ros/include/svo_ros/: visualizer.h
svo_ros/launch/: euroc_vio_stereo.launch  gemini_mono.launch
svo_ros/param/calib/: gemini_mono.yaml
svo_ros/src/: backend_visualizer.cpp  svo_interface.cpp  visualizer.cpp
vikit/vikit_ros/: CMakeLists.txt
vikit/vikit_ros/include/vikit/: output_helper.h
vikit/vikit_ros/src/: output_helper.cpp
